--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#317EFB">
   <link rel="shortcut icon" href="assets/images/icons/icon-192x192.png" type="image/x-icon">
 
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -43,6 +44,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="/assets/js/index.js"></script>
+  <script src="/assets/js/db.js"></script>
   <script>
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", () => {
